change body height to min height to prevent squashing of wheel.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-    height: 100%;
+    min-height: 100%;
   }
   
   body {
@@ -31,6 +31,9 @@ html, body {
     display: block;
   }
  
+  #instruction-box {
+    max-width: 400px;
+  }
   /* Bars */
   
   .bar {
